# soft-sensor-autoresearch

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: fde-integration.md  search-policy.md
scripts/: run_soft_sensor_autoresearch.py
soft_sensor_autoresearch/: __init__.py  artifacts.py  cli.py  context_sampling.py  data_contracts.py  derived_features.py  env_check.py  fde_bridge.py  feature_pool.py  holdout.py  model_runner.py  report.py  resource_logging.py  scoring.py  search.py
tests/: test_artifacts.py  test_cli_smoke.py  test_context_sampling.py  test_data_contracts.py  test_derived_features.py  test_e2e_fake.py  test_env_check.py  test_fde_bridge.py  test_feature_pool.py  test_holdout.py  test_model_runner.py  test_report.py  test_resource_logging.py  test_scoring.py  test_search.py
